--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -12,6 +12,8 @@
           uses: actions/setup-node@v1.1.0
           with:
             version:  12.x
+          env:  
+            ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'  
         - name: Checkout branch
           uses: actions/checkout@v2
 
