--- a/.github/workflows/gh-pages-deploy.yml
+++ b/.github/workflows/gh-pages-deploy.yml
@@ -22,5 +22,5 @@
 
         - name: Run deploy script
           run: |
-            git config user.name "Fogs64" && git config user.email "michael@sgoff.de"
+            git config user.name Fogs64 && git config user.email michael@sgoff.de
             npm run gh-pages-deploy
